Arreglo cards detrás de escena

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
               <img src="./assets/images/img1_4.png" alt="img1_4" class="img1_4">
               <h2>Acuarela</h2>
               <p>Con profundo orgullo y gran placer, le damos la bienvenida <br><br> 
-                Pongase cómodo, relajesé, nuestro huesped sea usted</p>
+                Pongase cómodo, relajesé, nuestro huesped sea usted
+              </p>
             </div>
           </div>
         </div>
@@ -92,13 +93,14 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item carousel-item__3 active">
+        <div class="carousel-item carousel-item__3">
           <h2>Los <br>
             Miserables</h2>
           <p>Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas
             con canto en vivo.
             Es un espectáculo destinado a todo público sugerido desde los 13 años
-            por la temática dramática.</p>
+            por la temática dramática.
+          </p>
           <div class="container__carousel">
             <a href="pages/cartelera.html">Más información</a>
           </div>
@@ -121,7 +123,8 @@
     <p>Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas
       con canto en vivo.
       Es un espectáculo destinado a todo público sugerido desde los 13 años
-      por la temática dramática.</p>
+      por la temática dramática.
+    </p>
     <div class="container__presentacion">
       <a href="pages/cartelera.html">Más información</a>
     </div>
