--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="card backstage_card" style="background-image: url(../assets/images/backstage/los_miserables_fondo.jpg)">
-            <div class="card-body">
+            <div class="card-body card-obra__1">
               <h5 class="card-title">Los Miserables</h5>
               <p class="card-text">Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas con canto en vivo.</p>
               <a href="losmiserables.html" class="btn btn-primary">VER MÁS</a>
@@ -69,7 +69,7 @@
         </div>
         <div class="col-12 col-md-6">
           <div class="card backstage_card" style="background-image: url(../assets/images/backstage/dracula_fondo.jpg)">
-            <div class="card-body">
+            <div class="card-body card-obra__2">
               <h5 class="card-title">Drácula</h5>
               <p class="card-text">Narra el viaje de Jonathan Harker a Transilvania para entregar las escrituras de las propiedades compradas por el conde Drácula en la ciudad inglesa de Whitby.</p>
               <a href="dracula.html" class="btn btn-primary">VER MÁS</a>
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="card backstage_card" style="background-image: url(../assets/images/backstage/mary_poppins_fondo.jpg)">
-            <div class="card-body">
+            <div class="card-body card-obra__3">
               <h5 class="card-title">Mary Poppins</h5>
               <p class="card-text">Dos niños rebeldes que pretenden llamar la atención de sus padres haciendo la vida imposible a todas la niñeras.</p>
               <a href="marypoppins.html" class="btn btn-primary">VER MÁS</a>
@@ -89,7 +89,7 @@
         </div>
         <div class="col-12 col-md-6">
           <div class="card backstage_card" style="background-image: url(../assets/images/backstage/mi_bella_dama_fondo.jpg)">
-            <div class="card-body">
+            <div class="card-body card-obra__4">
               <h5 class="card-title">Mi Bella Dama</h5>
               <p class="card-text">Una joven que vende flores en la calle caracterizada por tener una pronunciación terrible de su lengua reflejando su bajo nivel social. Una crítica, reflexiva y artística, sobre los prejuicios sociales que al día de hoy siguen vigentes.</p>
               <a href="belladama.html" class="btn btn-primary">VER MÁS</a>
@@ -100,7 +100,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="card backstage_card" style="background-image: url(../assets/images/backstage/frozen_fondo.jpg)">
-            <div class="card-body">
+            <div class="card-body card-obra__5">
               <h5 class="card-title">Frozen</h5>
               <p class="card-text">Una profecía condena al reino de Arandelle a vivir en un invierno eterno. La joven Anna, el temerario montañero Kristoff y el reno Sven deben emprender un viaje épico y lleno de aventuras en busca de Elsa.</p>
               <a href="frozen.html" class="btn btn-primary">VER MÁS</a>
@@ -109,7 +109,7 @@
         </div>
         <div class="col-12 col-md-6">
           <div class="card backstage_card" style="background-image: url(../assets/images/backstage/bella_y_la_bestia_fondo.jpg)">
-            <div class="card-body">
+            <div class="card-body card-obra__6">
               <h5 class="card-title">La Bella y la Bestia</h5>
               <p class="card-text">La historia de un joven príncipe transformado en una horrible bestia como castigo a su comportamiento cruel y egoísta, y de una muchacha llamada Bella a quien la bestia encierra en su castillo a cambio de la libertad de su padre.</p>
               <a href="bellaylabestia.html" class="btn btn-primary">VER MÁS</a>
