--- a/pages/cartelera.html
+++ b/pages/cartelera.html
@@ -55,16 +55,16 @@
   <!-- Sección cartelera -->
   <section id="cartelera">
     <div class="section--cartelera">
-      <h2>Titulo de la obra</h2>
+      <h2>Tributo a Los Miserables</h2>
       <p>Fechas y horarios</p>
       <p>Lugar</p>
       <p>Descripción</p>
-      <p>Lörem ipsum ipögt lagyns tred teraren. Bektiga repirtad antektigt. 
-        Rondellhund ambiosmos suprafoll. Häsk metaception om rera tibelt niren. 
-        Trekivis. Coronahälsning antede dent tills hypon sor. 
-        Nåsam. Diderat eura, krona snackis.</p>
+      <p>Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas
+        con canto en vivo.
+        Es un espectáculo destinado a todo público sugerido desde los 13 años
+        por la temática dramática.</p>
       <div class="section--cartelera-description">
-        <div>
+        <div class="section--cartelera-description__contenedor1">
           <h3>Créditos</h3>
           <ul>
             <li>Música</li>
@@ -73,7 +73,7 @@
             <li>Dirección de escena y escenografía</li>
           </ul>
         </div>
-        <div>
+        <div class="section--cartelera-description__contenedor2">
           <h3>Principales Intérpretes</h3>
           <ul>
             <li>Actor 1</li>
