--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Acuarela Teatro Musical - Inicio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
+  <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!--Barra de navegación-->
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item carousel-item__3 active">
+        <div class="carousel-item carousel-item__3">
           <h2>Los <br>
             Miserables</h2>
           <p>Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas
@@ -144,9 +144,8 @@
       <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
   </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
   <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  <script src="./js/main.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
