--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Acuarela Teatro Musical - Quienes somos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="../styles/styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
+  <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!--Barra de navegación-->
@@ -56,7 +57,7 @@
   <section id="quienesSomos">
     <div class="container-timeline">
       <div class="timeline">
-          <div class="swiper-container swiper-container-vertical">
+          <div class="swiper">
               <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;">
                   <div class="swiper-slide" style="background-image: url(../assets/images/timeline_2013.png)" data-year="2013">
                       <div class="swiper-slide-content">
@@ -140,13 +141,6 @@
                           que la trayectoria ha dado su fruto.</p>
                     </div>
                   </div>
-                  <div class="swiper-slide" style="background-image: url(https://unsplash.it/1920/500?image=16)" data-year="2020">
-                    <div class="swiper-slide-content">
-                        <span class="timeline-year">2020</span>
-                        <h4 class="timeline-title">Our nice super title</h4>
-                        <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                  </div>
                   <div class="swiper-slide" style="background-image: url(../assets/images/timeline_2021.png)" data-year="2021">
                     <div class="swiper-slide-content">
                         <span class="timeline-year">2021</span>
@@ -178,9 +172,9 @@
                     </div>
                 </div>
               </div>
-              <div class="swiper-button-prev swiper-button-disabled"></div>
+              <div class="swiper-button-prev"></div>
               <div class="swiper-button-next"></div>
-              <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"></div>
+              <div class="swiper-pagination"></div>
           </div>
       </div>
     </div>
@@ -203,7 +197,7 @@
       <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
   </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <script src="../js/main.js"></script>
