Cambios la sección de talleres y pagina principal

--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
             <div class="carousel--img"></div>
             <div class="carousel--diagonal"></div>
             <div class="carousel--text">
+                <img src="./assets/images/img2_1_mobile.png" alt="img2_1_mobile" class="img2_1">
                 <h2>Talleres</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat </p>
+                <p><span>Contamos con talleres dirigidos a niños y adultos.</span><br><br>
+                  Es mucho más que unos encuentros semanales, es magia, es amor, es pura fantasía y personas creciendo en empatía, solidaridad, admirándose, sosteniéndose. <br><br><br>
+                  Una red que se va tejiendo y que cada año brilla con más intensidad.
+                </p>
                 <div class="container__carousel">
                   <a href="pages/talleres.html">Más información</a>
                 </div>
