--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -61,13 +61,22 @@
       <div class="talleres--diagonal--borde"></div>
       <div class="talleres--text">
           <h2>Taller para niños</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat </p>
-          <ul>
-            <li>Duración</li>
-            <li>Costo</li>
-            <li>Requisitos</li>
-          </ul>
+          <p>El taller para niños de Acuarela es lo que comenzó todo. Chicos y chicas de entre 5 a 12 años aprenden de canto, baile, actuación los días viernes de 19:00 hs a 21:00 hs. <br><br>
+             Trabajando en equipo aprenden a desenvolverse en público y preparan a lo largo del año una muestra llena de diversión donde se aprecia el crecimiento el esfuerzo y el trabajo de los chicos a lo largo del año.<br><br>
+            Te invitamos a conocer más sobre este hermoso taller diseñado para los más chicos. </p>
       </div>
+    </div>
+    <div class="section--talleres section--talleres_2">
+      <div class="talleres--text2">
+          <h2>Taller para adultos</h2>
+          <p>Un taller para adolescentes y adultos que busca llevar más allá lo aprendido en las 3 disciplinas.<br><br>
+            Las clases se realizan martes y miércoles de 20:30 a 22:30 hs, además de clases adicionales de teatro los segundos y cuartos sábados de cada mes de 15:00 a 19:00 hs.<br><br> 
+            Trabajando un repertorio muy variado de musicales a lo largo del año y puliendo las destrezas para realizar una obra a fin de año. </p>
+      </div>
+    
+      <div class="talleres--img2"></div>
+      <div class="talleres--diagonal2"></div>
+      <div class="talleres--diagonal--borde"></div>
     </div>
   </section>
   <!--Footer-->
