Agregando enlaces y modificación footer mobile

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,7 +90,7 @@
     <div id="remarque"></div>
     <p>Nos podes encontrar en Tafí Viejo</p>
     <div id="div-map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7126.734109997126!2d-65.2552452021157!3d-26.732660457886315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942267ba4b08b155%3A0xf5c2baa50f221dc4!2sMunicipalidad%20de%20Taf%C3%AD%20Viejo!5e0!3m2!1ses-419!2sar!4v1657754425030!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1059.3619017845251!2d-65.260035371026!3d-26.73625340078126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942267b92019aa59%3A0x3e382b173fd2a0ac!2sGral.%20Jos%C3%A9%20de%20San%20Mart%C3%ADn%20519%2C%20T4103FKK%20Taf%C3%AD%20Viejo%2C%20Tucum%C3%A1n!5e0!3m2!1ses-419!2sar!4v1660934768506!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
   <!--Footer-->
@@ -104,11 +104,11 @@
       <p>Whatsapp: +54 381 300-8840</p>
     </div>
     <div id="footer-links">
-      <a href="#"><i class="fa-brands fa-facebook"></i></a>
-      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#"><i class="fa-brands fa-youtube"></i></a>
-      <a href="#"><i class="fa-solid fa-envelope"></i></a>
-      <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="#"><i class="fa-brands fa-facebook" target="_blank"></i></a>
+      <a href="https://www.instagram.com/coroacuarela/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.youtube.com/channel/UCcHbuoWVV1LtLLMPR86pYZA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+      <a href="mailto:teatromusical.acuarela@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=543813008840&text=Hola!%20Me%20interesa%20saber%20m%C3%A1s%20sobre%20Acuarela" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
