--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -60,7 +60,7 @@
       </div>
       <div class="talleres--diagonal--borde"></div>
       <div class="talleres--text">
-          <h2>Taller para niños</h2>
+          <h2 style="background-color:red !important;">Taller para niños</h2>
           <p>El taller para niños de Acuarela es lo que comenzó todo. Chicos y chicas de entre 5 a 12 años aprenden de canto, baile, actuación los días viernes de 19:00 hs a 21:00 hs. <br><br>
              Trabajando en equipo aprenden a desenvolverse en público y preparan a lo largo del año una muestra llena de diversión donde se aprecia el crecimiento el esfuerzo y el trabajo de los chicos a lo largo del año.<br><br>
             Te invitamos a conocer más sobre este hermoso taller diseñado para los más chicos. </p>
@@ -90,11 +90,11 @@
       <p>Whatsapp: +54 381 300-8840</p>
     </div>
     <div id="footer-links">
-      <a href="#"><i class="fa-brands fa-facebook"></i></a>
-      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#"><i class="fa-brands fa-youtube"></i></a>
-      <a href="#"><i class="fa-solid fa-envelope"></i></a>
-      <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="#"><i class="fa-brands fa-facebook" target="_blank"></i></a>
+      <a href="https://www.instagram.com/coroacuarela/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.youtube.com/channel/UCcHbuoWVV1LtLLMPR86pYZA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+      <a href="mailto:teatromusical.acuarela@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=543813008840&text=Hola!%20Me%20interesa%20saber%20m%C3%A1s%20sobre%20Acuarela" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
