--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -130,11 +130,11 @@
       <p>Whatsapp: +54 381 300-8840</p>
     </div>
     <div id="footer-links">
-      <a href="#"><i class="fa-brands fa-facebook"></i></a>
-      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#"><i class="fa-brands fa-youtube"></i></a>
-      <a href="#"><i class="fa-solid fa-envelope"></i></a>
-      <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="#"><i class="fa-brands fa-facebook" target="_blank"></i></a>
+      <a href="https://www.instagram.com/coroacuarela/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.youtube.com/channel/UCcHbuoWVV1LtLLMPR86pYZA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+      <a href="mailto:teatromusical.acuarela@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=543813008840&text=Hola!%20Me%20interesa%20saber%20m%C3%A1s%20sobre%20Acuarela" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
